manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: backend
          # image: pavelkh09/backend:sha-731ae26bd91c9836caba5ea23a76dbdd7c73d61d
          image: ${IMAGE}
          resources:
            requests:
              cpu: "60m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "500Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
