manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  namespace: default
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3001
      targetPort: 3000
  type: LoadBalancer
